feat: add created_at to invocation and version to ui (#995)
* feat: add created_at to invocation


* chore: added time to mock fn


* feat: show created_at time on UI


* chore: fix lint issues


* chore: fix lint issues - v2


* chore: updated api docs


* feat: add version


* feat: add version to the ui


* chore: fix build


* Revert "feat: add version"

This reverts commit 2d82559ffde91adade594c6c8e97ae42ec515daa.

* feat: change version display order


---------
